2007-06-22  Tambet Ingo  <tambet@ximian.com>

	* src/applet.c (nma_add_networks_helper): Fix a typo that caused crashes.

2007-06-21  Tambet Ingo  <tambet@ximian.com>

	* src/applet-dbus-info.c (nmi_dbus_get_key_for_network): Move the passphrase
	dialog creation to another function that is called from the main loop so that
	the "getKeyForNetwork" dbus call can return before the dialog asks a bunch of
	information over dbus.

2207-06-14  Christopher Aillon  <caillon@redhat.com>

	* src/applet.glade: (passphrase_required)
	Connect to a network, not log in.  (#372154)

2007-06-13  Tambet Ingo  <tambet@ximian.com>

	* src/applet.c (nma_menu_item_activate): Fix the NMSettingWireless
	creation.

2007-05-07  Tambet Ingo  <tambet@ximian.com>

	* src/applet.c (nma_menu_item_activate): Create and use a NMConnection
	for device activation.

2007-03-28  Tambet Ingo  <tambet@ximian.com>

	* src/applet-dbus-info.c (nmi_dbus_get_key_for_network): Fix a typo: we do
	want the device to be a wireless device.

2007-03-26  Tambet Ingo  <tambet@ximian.com>

	Fix VPN.
	Clean up a lot of old non-working dbus calls and data structures and replace
	them with what libnm-glib provides.

	* src/applet-dbus-devices.c
	* src/applet-dbus-devices.h
	* src/applet-dbus-vpn.c
	* src/applet-dbus-vpn.h
	* src/wireless-network.c
	* src/wireless-network.h
	* src/nm-device.c
	* src/nm-device.h
	* src/vpn-connection.c
	* src/vpn-connection.h

	Remove. All of these are provided by libnm-glib now.

2007-03-16  Tambet Ingo  <tambet@ximian.com>

	First stab at converting the applet over to libnm-glib instead of using
	the low-level DBUS API (which is removed from NM by now). Since libnm-glib
	emits signals for all "interesting" state changes in NM, we don't have to
	poll for any changes in the applet and can sleep and do nothing if there
	are no events (either from X or libnm-glib).

	The current status should be that the status icon should show the correct