@@ -1,3 +1,8 @@
+2007-06-27  Dan Williams  <dcbw@redhat.com>
+
+	* Make SSIDs GByteArrays everywhere
+	* Rename "essid" -> "ssid" everywhere that's appropriate
+
 2007-06-22  Tambet Ingo  <tambet@ximian.com>
 
 	* src/applet.c (nma_add_networks_helper): Fix a typo that caused crashes.
